--- a/login_to_test.html
+++ b/login_to_test.html
@@ -180,17 +180,17 @@
             </div>
 
             <div class="form-group">
-                <input type="text" id="lastName" autocomplete="off" placeholder="Фамилия" class="form-control" minlength="3" pattern="[A-Za-zА-Яа-яЁё]{3,}">
+                <input type="text" id="lastName" autocomplete="off" placeholder="Фамилия" class="form-control" minlength="3"">
                 <div id="lastNameError" class="text-danger" style="display: none;">Тест недоступен. Перезагрузите
                     страницу.
                 </div>
             </div>
             <div class="form-group">
-                <input type="text" autocomplete="off" id="firstName" placeholder="Имя" class="form-control" minlength="3" pattern="[A-Za-zА-Яа-яЁё]{3,}">
+                <input type="text" autocomplete="off" id="firstName" placeholder="Имя" class="form-control" minlength="3"">
             </div>
             <div class="form-group">
                 <!-- <label for="class">Класс:</label> -->
-                <input type="hidden" id="class" class="form-control" maxlength="6" pattern="[A-Za-zА-Яа-яЁё0-9]{1,3}"
+                <input type="hidden" id="class" class="form-control" maxlength="6"
                     placeholder="Заполнится автоматически">
             </div>
             <button type="button" id="startTestButton" class="start-button">Начать</button>
