--- a/admin.html
+++ b/admin.html
@@ -161,6 +161,7 @@
         </div>
         <div id="classButtons">
             <button onclick="loadTests('all')">все</button>
+            <button onclick="loadTests('остальное')">остальное</button>
             <button onclick="loadTests('11гр1')">11 гр1</button>
             <button onclick="loadTests('11гр2')">11 гр2</button>
             <button onclick="loadTests('11гр3')">11 гр3</button>
@@ -197,6 +198,7 @@
                     <div class="mb-3">
                         <label for="classSelect" class="form-label">Выберите класс</label>
                         <select class="form-control" id="classSelect">
+                            <option value="остальное">остальное</option>
                             <option value="11гр1">11 гр1</option>
                             <option value="11гр2">11 гр2</option>
                             <option value="11гр3">11 гр3</option>
@@ -242,6 +244,7 @@
                     <div class="mb-3">
                         <label for="classSelectRename" class="form-label">Выберите класс</label>
                         <select class="form-control" id="classSelectRename">
+                            <option value="остальное">остальное</option>
                             <option value="11гр1">11 гр1</option>
                             <option value="11гр2">11 гр2</option>
                             <option value="11гр3">11 гр3</option>
